Fix: button/text margin on tablet size.

--- a/client/my-sites/themes/style.scss
+++ b/client/my-sites/themes/style.scss
@@ -252,7 +252,7 @@
 
 .themes__sheet-card-support-details {
 	flex: 1 1 20px;
-	padding-left: 20px;
+	padding: 0 20px;
 
 	small {
 		display: block;
